--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <div id="dateTime"></div>    
             </div>    
             <div id="smallCards">
-                <div id="feelsLike"></div>
-                <div id="description"></div>
-                <div id="maxTemp"></div>
-                <div id="humidity"></div>
-                <div id="seaLevel"></div>
+                <div id="feelsLike"><img src= alt=""></div>
+                <div id="description"><img src= alt=""></div>
+                <div id="maxTemp"><img src= alt=""></div>
+                <div id="humidity"><img src= alt=""></div>
+                <div id="seaLevel"><img src= alt=""></div>
                 <div id="wind"></div>
             </div>
             <div id="otherDaysCards">
