--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <div id="dateTime"></div>    
             </div>    
             <div id="smallCards">
-                <div id="feelsLike"><img src= alt=""></div>
-                <div id="description"><img src= alt=""></div>
-                <div id="maxTemp"><img src= alt=""></div>
-                <div id="humidity"><img src= alt=""></div>
-                <div id="seaLevel"><img src= alt=""></div>
+                <div id="feelsLike"></div>
+                <div id="description"></div>
+                <div id="maxTemp"></div>
+                <div id="humidity"></div>
+                <div id="seaLevel"></div>
                 <div id="wind"></div>
             </div>
             <div id="otherDaysCards">
@@ -66,4 +66,5 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
 </body>
+
 </html>
