Few till final production

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <div id="leftS">
             <div id="bigBox">
                 <div id="BigImage">
-                    
                 </div> 
                 <div id="conditionT"></div>
                 <div id="dateTime"></div>    
@@ -43,21 +42,17 @@
         </div>
         <div id="rightS">
             <div id="suggestionBox">
-                <span id="theClothing"></span>
+                <h3 style="margin-left-top: 20px;">Suggested Clothing</h3>
+                <div id="det"></div>
             </div>
             <div id="otherCitiesBox">
+                <div id="city0"></div>
                 <div id="city1"></div>
                 <div id="city2"></div>
-                <div id="city3"></div>
             </div>            
         </div>
     </main>
 
-
-
-  <h2>Check Weather</h2>
-
-  
 
   <p id="result"></p>
 
